--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "freelancing-qa"
-  }
+  },
+  "targets": {
+    "freelancing-qa": {
+      "hosting": {
+        "sample-project": [
+          "sample-project-qa"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
